feat(tailwindcss): :sparkles: se agrega tailwind
se agrega nuxt-tailwind al proyecto

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "bumpp": "^9.9.1",
     "husky": "^9.1.7"
   },
